--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,13 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@tiptap/vue-3": "^2.11.5",
-    "vue": "^3.5.13"
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
+    "pinia": "^2.3.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
